styles/Home.module.css
/* Mobile home */
.Mobcontainer {
  display: none;
}

.mobMobileContainer {
  display: none;
}

@media screen and (max-width: 900px) {
  .Mobcontainer {
    display: block;
    background-image: radial-gradient(rgb(214, 214, 214) 1px, transparent 0);
    background-size: 30px 30px;
    overflow: hidden;
  }

  .mobMobileContainer {
    display: block;
    background-image: radial-gradient(rgba(214, 214, 214, 0.427) 1px, transparent 0);
    background-size: 30px 30px;
    margin-bottom: 20px;
  }

  .blogBody {
    display: none !important;
  }

  .container {
    display: none !important;
  }
}

.Mobcontainer {
  height: 100vh;
  /* overflow: hidden; */
}

.Mobheader {
  margin-left: 20px;
  margin-right: 20px;
  display: flex;
  /* margin-top: 18px; */
  justify-content: space-between;
  min-height: 60px;
}

.mobHamburger img {
  margin-top: 18px;
}

.mobHamburger button {
  background: none;
  border: none;
}

.mobLogo img {
  width: 170px;
  margin-top: 18px;
}

.mobAnim {
  height: 30%;
  background: #374151;
  margin-top: 18px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-image: radial-gradient(rgba(255, 255, 255, 0.085) 1px, transparent 0);
  background-size: 30px 30px;
}

.mobCaption {
  text-align: center;
  margin-bottom: 40px;
  /* background: red; */
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 30px;
}

@media screen and (max-height: 800px) {
  /* .mobCaption {
    height: 40%;
  } */
}

.mobCaption h1 {
  font-size: 34px;
  font-weight: 200;
  line-height: 46px;
  letter-spacing: 1px;
  margin-top: 10px;
  color: #374151;
}

.mobCaption a {
  color: #37BE43;
  font-weight: 600;
  font-size: 14px;
  line-height: 21px;
  border: 2px solid #37BE43;
  border-radius: 8px;
  padding-top: 16px;
  width: 160px;
  height: 34px;
  justify-content: center;
  display: flex;
  text-decoration: none;
}

.mobSocial {
  display: flex;
  justify-content: center;
}

.mobSocialCaseStudy {
  position: absolute;
  bottom: 50px;
  justify-content: center;
  display: flex;
  width: 100%;
}

.mobSocialIcon {
  margin-left: 20px;
  margin-right: 20px;
}

.mobFooter {
  justify-content: center;
  display: flex;
  padding-top: 20px;
  color: #888F99;
  font-size: 14px;
}

.mobFooterHome {
  position: absolute;
  bottom: 12px;
  width: 100%;
  display: flex;
  justify-content: center;
  color: #888F99;
  font-size: 14px;
}

.mobBlockContainer {
  display: flex;
  /* position: fixed; */
  z-index: 0;
  display: block;
  padding: 10px;
}

.mobBlock {
  position: relative;
  box-sizing: border-box;
  float: left;
  margin: 15px 25px 15px 25px;
  /* outline: 10px solid rgb(55, 65, 81); */
  width: 5px;
  height: 5px;
  /* border-radius: 6px; */
  background: rgb(55, 65, 81);
  /* border: 1px solid rgb(34 197 94 / 75%); */
  opacity: 1;
  /* color:  rgb(34 197 94 / 75%); */
  /* background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="5px" height="5px"> <rect width="5" height="5" style="fill:rgb(255,255,255);stroke-width:1;" /></svg>'); */
  /* background-repeat: no-repeat; */
  /* background-attachment: fixed;
    background-position-x: left; */
  /* content: "hello";
  visibility: visible; */
}

.mobBlock:nth-child(4n+1) {
  animation: waveMobile 4s ease .0s infinite;
}

.mobBlock:nth-child(4n+2) {
  animation: waveMobile 4s ease .4s infinite;
}

.mobBlock:nth-child(4n+3) {
  animation: waveMobile 4s ease .6s infinite;
}

.mobBlock:nth-child(4n+4) {
  animation: waveMobile 4s ease .8s infinite;
}

@keyframes waveMobile {
  0% {
    top: 5px;
    opacity: 1;
    background: #888F99;
    backdrop-filter: blur(15px) saturate(3);
    background-size: 35px 35px;
    background-attachment: 10px;
    background-position-x: 12.5px;
    background-position-y: 12.5px;
  }

  50% {
    top: 0px;
    opacity: 1;
    /* backdrop-filter: blur(15px) saturate(3); */
    background: #888F99;
    background-attachment: 10px;
    background-position-x: 12.5px;
    background-position-y: 12.5px;
  }

  100% {
    top: 5px;
    opacity: 1;
    /* backdrop-filter: blur(15px) saturate(3); */
    background-attachment: 10px;
    background-position-x: 12.5px;
    background-position-y: 12.5px;
    background: #888F99;
  }
}

.blogBlockContainer {
  display: flex;
  /* position: fixed; */
  z-index: 0;
  display: block;
  padding: 10px;
}

.blogBlock {
  position: relative;
  box-sizing: border-box;
  float: left;
  margin: 20px 50px 20px 50px;
  /* outline: 10px solid rgb(55, 65, 81); */
  width: 5px;
  height: 5px;
  /* border-radius: 6px; */
  background: rgb(55, 65, 81);
  /* border: 1px solid rgb(34 197 94 / 75%); */
  opacity: 1;
  /* color:  rgb(34 197 94 / 75%); */
  /* background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="5px" height="5px"> <rect width="5" height="5" style="fill:rgb(255,255,255);stroke-width:1;" /></svg>'); */
  /* background-repeat: no-repeat; */
  /* background-attachment: fixed;
    background-position-x: left; */
  /* content: "hello";
  visibility: visible; */
}

@media screen and (max-width: 1550px) {
  .blogBlock {
    margin: 20px 35px 20px 35px;
}
}

.blogBlock:nth-child(4n+1) {
  animation: waveBlog 4s ease .0s infinite;
}

.blogBlock:nth-child(4n+2) {
  animation: waveBlog 4s ease .4s infinite;
}

.blogBlock:nth-child(4n+3) {
  animation: waveBlog 4s ease .6s infinite;
}

.blogBlock:nth-child(4n+4) {
  animation: waveBlog 4s ease .8s infinite;
}
/* ... */

